force-app/main/default/objects/Trip__c/Trip__c.object-meta.xml
<CustomObject>
    <description>Represents a single physical trip between two locations. Groups related line items sharing the same departure, direction, and date. Carries the complete pricing calculation.</description>
    <label>Trip</label>
    <nameField>
        <displayFormat>TRIP-{00000}</displayFormat>
        <label>Trip Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trips</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>