force-app/main/default/objects/Trip__c/fields/Bin_Visualization_URL__c.field-meta.xml
<CustomField>
    <fullName>Bin_Visualization_URL__c</fullName>
    <description>Stores the 3D visualization URL generated by the BinSolver API. This link allows users to view the exact placement of products inside the truck.</description>
    <inlineHelpText>Click this link to open the 3D viewer and see how the items were packed for this shipment.</inlineHelpText>
    <label>Bin Visualization URL</label>
    <type>Url</type>
</CustomField>