force-app/main/default/objects/Trip__c/fields/Calculation_Detail__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Detail__c</fullName>
    <description>Complete breakdown of the pricing calculation for audit purposes. Contains the step-by-step calculation showing base price, extra km charges, return discount, applied surcharges, and currency conversion details.</description>
    <inlineHelpText>Detailed breakdown of how the price was calculated. Auto-generated by the system for audit and troubleshooting purposes.</inlineHelpText>
    <label>Calculation Detail</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>