force-app/main/default/objects/Trip__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>ISO 3166-1 alpha-2 country code of the agency (warehouse) associated with this trip, regardless of direction. This is the primary filter key used by the calculation engine to retrieve all country-specific configuration rules: transport zones, truck types, rates, surcharges, and currency.</description>
    <inlineHelpText>Country code of the agency handling this trip. Determines which country-specific pricing rules apply. Automatically populated — do not edit manually.</inlineHelpText>
    <label>Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>