force-app/main/default/objects/Trip__c/fields/Departure_Location__c.field-meta.xml
<CustomField>
    <fullName>Departure_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Origin location for this trip. For delivery trips, this is typically a warehouse or agency. For pickup trips, this is the client site. The country code from this location drives all country-specific configuration lookups.</description>
    <inlineHelpText>The starting point of this trip. Delivery = departs from warehouse. Pickup = departs from client site.</inlineHelpText>
    <label>Departure Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Trips Departure</relationshipLabel>
    <relationshipName>Trips_Departure</relationshipName>
    <type>Lookup</type>
</CustomField>