force-app/main/default/objects/Trip__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <description>Indicates the direction of the trip. Delivery = outbound from warehouse to site. Pickup = return from site to warehouse. Affects pricing through return discount rules.</description>
    <inlineHelpText>Select &quot;Delivery&quot; for outbound trips (warehouse → site) or &quot;Pickup&quot; for return trips (site → warehouse). Pickup trips may receive a return discount.</inlineHelpText>
    <label>Direction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Pickup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>