force-app/main/default/objects/Trip__c/fields/Distance_Km__c.field-meta.xml
<CustomField>
    <fullName>Distance_Km__c</fullName>
    <description>Distance in kilometers between the departure and destination locations. Populated automatically by the system.</description>
    <inlineHelpText>Distance between departure and destination in km. Automatically populated by the system.</inlineHelpText>
    <label>Distance (km)</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>