force-app/main/default/objects/Trip__c/fields/Final_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Price__c</fullName>
    <description>Final price for this trip. Defaults to the system-calculated price. Can be manually overridden by authorized users with a documented reason. This value feeds the parent opportunity&apos;s total cost roll-up.</description>
    <inlineHelpText>The final price for this trip. Equals the system price by default. Override only with manager approval and provide a reason in the Override Reason field.</inlineHelpText>
    <label>Final Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>