force-app/main/default/objects/Trip__c/fields/Is_Price_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Is_Price_Overridden__c</fullName>
    <description>Indicates whether the final price differs from the system-calculated price. Used for reporting, approval processes, and audit trails.</description>
    <formula>Final_Price__c &lt;&gt; System_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically checked when the final price has been manually changed from the system-calculated price.</inlineHelpText>
    <label>Is Price Overridden</label>
    <type>Checkbox</type>
</CustomField>