force-app/main/default/objects/Trip__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Parent opportunity for this trip. This master-detail relationship enables automatic cost aggregation via roll-up summary. The trip inherits sharing and security from the parent opportunity. Cannot be reparented after creation.</description>
    <inlineHelpText>The parent opportunity for this trip. Required at creation and cannot be changed afterward. When creating a trip from an opportunity&apos;s related list, this field is pre-filled.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Trips</relationshipLabel>
    <relationshipName>Trips</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>