force-app/main/default/objects/Trip__c/fields/Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Reason__c</fullName>
    <description>Mandatory justification when the final price is overridden from the system-calculated price. Provides an audit trail for pricing decisions.</description>
    <inlineHelpText>Required when the final price differs from the system price. Explain why the price was adjusted (e.g., &quot;Customer negotiation&quot;, &quot;Manager approval #12345&quot;).</inlineHelpText>
    <label>Override Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>