force-app/main/default/objects/Trip__c/fields/Price_Before_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Price_Before_Conversion__c</fullName>
    <description>Final calculated price in the original rate currency before currency conversion. Stored for audit purposes when a currency conversion was applied in the final calculation step.</description>
    <inlineHelpText>The calculated price in the original rate currency, before any currency conversion. Useful for auditing multi-currency calculations.</inlineHelpText>
    <label>Price Before Conversion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>