force-app/main/default/objects/Trip__c/fields/Rate_Currency__c.field-meta.xml
<CustomField>
    <fullName>Rate_Currency__c</fullName>
    <description>ISO 4217 currency code of the original pricing rate used in the calculation. When this differs from the opportunity&apos;s currency, a conversion is performed and documented.</description>
    <inlineHelpText>The original currency of the pricing rate (e.g., EUR, GBP). If different from the opportunity currency, a conversion was applied.</inlineHelpText>
    <label>Rate Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>