force-app/main/default/objects/Trip__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current lifecycle status of the trip. Controls whether the trip cost is included in the parent opportunity&apos;s total. Cancelled trips are excluded from cost aggregation.</description>
    <inlineHelpText>Current status of this trip. Only non-cancelled trips are included in the opportunity&apos;s total cost calculation.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>