force-app/main/default/objects/Trip__c/fields/System_Price__c.field-meta.xml
<CustomField>
    <fullName>System_Price__c</fullName>
    <description>Price calculated by the automated pricing engine through all calculation steps (base price, distance adjustments, return discount, surcharges, currency conversion). This value is system-generated and should not be manually edited.</description>
    <inlineHelpText>The price calculated automatically by the pricing engine. This is the reference price before any manual override. Read-only.</inlineHelpText>
    <label>System Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>