force-app/main/default/objects/Trip__c/fields/Total_Weight_Kg__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_Kg__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total weight in kilograms of all items assigned to this trip. Calculated as the sum of (product unit weight × line item quantity) for each line item. Determines the required truck type.</description>
    <inlineHelpText>Total cargo weight for this trip in kg. Calculated automatically from the assigned line items. Used to determine the appropriate truck type.</inlineHelpText>
    <label>Total Weight (kg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>