force-app/main/default/objects/Trip__c/fields/Transport_Zone__c.field-meta.xml
<CustomField>
    <fullName>Transport_Zone__c</fullName>
    <description>Zone code determined by matching the trip distance against configured distance ranges for the applicable country. Stored for audit and traceability purposes.</description>
    <inlineHelpText>The pricing zone assigned to this trip based on its distance (e.g., A, B, C). Automatically determined by the calculation engine.</inlineHelpText>
    <label>Transport Zone</label>
    <length>5</length>
    <type>Text</type>
</CustomField>