force-app/main/default/objects/Trip__c/fields/Trip_Date__c.field-meta.xml
<CustomField>
    <fullName>Trip_Date__c</fullName>
    <description>Scheduled date for this trip. Used to filter configuration rules by their effective date ranges. Also serves as one of the three grouping criteria (location + direction + date).</description>
    <inlineHelpText>The date this trip is scheduled. This date determines which pricing rules and surcharges apply based on their validity periods.</inlineHelpText>
    <label>Trip Date</label>
    <type>Date</type>
</CustomField>