force-app/main/default/objects/Trip__c/fields/Trip_Key__c.field-meta.xml
<CustomField>
    <fullName>Trip_Key__c</fullName>
    <description>Unique grouping key for this trip. Encodes the departure location code, direction, and date in the format LOCATION_DIRECTION_YYYY-MM-DD. Used to group related line items into the same trip.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique trip identifier in format LOCATION_DIRECTION_YYYY-MM-DD (e.g., NANT_DEL_2025-03-15). Automatically generated by the system.</inlineHelpText>
    <label>Trip Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>