force-app/main/default/objects/Trip__c/fields/Truck_Type__c.field-meta.xml
<CustomField>
    <fullName>Truck_Type__c</fullName>
    <description>Truck type code determined by matching the total weight against configured weight thresholds for the applicable country. The smallest truck capable of carrying the load is selected. Stored for audit.</description>
    <inlineHelpText>The truck type assigned to this trip based on total weight (e.g., VL, PL12, PL35). Automatically determined by the calculation engine.</inlineHelpText>
    <label>Truck Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>