force-app/main/default/objects/Trip__c/validationRules/Departure_Not_Equal_Destination.validationRule-meta.xml
<ValidationRule>
    <fullName>Departure_Not_Equal_Destination</fullName>
    <active>true</active>
    <description>Prevents creating a trip where the departure and destination locations are identical. A valid trip requires two distinct locations.</description>
    <errorConditionFormula>Departure_Location__c = Destination_Location__c</errorConditionFormula>
    <errorMessage>Departure and destination locations must be different.</errorMessage>
</ValidationRule>