force-app/main/default/objects/Trip__c/validationRules/Final_Price_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Final_Price_Not_Negative</fullName>
    <active>true</active>
    <description>Prevents saving a trip with a negative final price. Ensures data integrity for cost calculations and roll-up summaries on the parent opportunity.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Final_Price__c)),
    Final_Price__c &lt; 0
)</errorConditionFormula>
    <errorDisplayField>Final_Price__c</errorDisplayField>
    <errorMessage>Final price cannot be negative.</errorMessage>
</ValidationRule>