force-app/main/default/objects/Trip__c/validationRules/Trip_Date_Not_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Trip_Date_Not_Past</fullName>
    <active>true</active>
    <description>Prevents creating new trips with a date in the past. Ensures trips are scheduled for current or future dates. Only applies to new records — existing trips can retain historical dates.</description>
    <errorConditionFormula>AND(
    ISNEW(),
    Trip_Date__c &lt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Trip_Date__c</errorDisplayField>
    <errorMessage>Trip date cannot be in the past for new trips.</errorMessage>
</ValidationRule>